--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
+    <!-- =========================== Favicon ============================== -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <!-- ================================================================= -->
     <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Blog and Gallery Portfolio</title>
 </head>
@@ -13,12 +20,12 @@
     </header>
     <nav id="articles">  
         <a href="index.html">Home</a>
-        <a href="/gallery">Gallery</a>   <!--#links within page with id-->
+        <a href="gallery.html">Gallery</a>   <!--#links within page with id-->
         <a href="contact.html">Contact</a>
 
     </nav>
     <main>
-        <section id="news">
+        <section>
         
         </section>
       
