Added favicon to header for all three pages.

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <h1>Emily Tsui</h1>
+        <img src="android-chrome-192x192.png" alt="Website title logo next to name Emily Tsui"><h1>Emily Tsui</h1>
     </header>
     <nav id="articles">  
         <a href="index.html">Home</a>
