--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
     <!-- =========================== Favicon ============================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png"> 
+    <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png"> 
+    <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png"> 
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png"> 
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png"> 
+    <link rel="manifest" href="site.webmanifest">
     <!-- ================================================================= -->
     <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Blog and Gallery Portfolio</title>
 </head>
 <body>
     <header>
-        <img src="android-chrome-192x192.png" alt="Website title logo next to name Emily Tsui"><h1>Emily Tsui</h1>
+        <h1><img src="android-chrome-192x192.png" alt="Website title logo next to name Emily Tsui">Emily Tsui</h1>
     </header>
     <nav id="articles">  
         <a href="index.html">Home</a>
