Adjusted CS Colors for footer and header

--- a/index.html
+++ b/index.html
@@ -17,20 +17,34 @@
     <title>Blog and Gallery Portfolio</title>
 </head>
 <body>
-    <header>
-      <img src="android-chrome-192x192.png" alt="Website title logo next to name Emily Tsui">
-    </header>
-    <nav id="articles">  
-        <a href="index.html">Home</a>
-        <a href="gallery.html">Gallery</a>   <!--#links within page with id-->
-        <a href="contact.html">Contact</a>
+    <header> 
+    <nav id="articles"> 
+      <img src="android-chrome-192x192.png" alt="Website title logo next to name Emily Tsui"> 
+      <h1>Emily Tsui</h1>  
+      <a href="index.html">Home</a>
+      <a href="gallery.html">Gallery</a>   <!--#links within page with id-->
+      <a href="contact.html">Contact</a>
     </nav>
+    </header>
+   
 
     <main>
-        <section id="introduction">
-          <h2>Welcome!</h2>
-          <article id="intro1" class="intro1">
-            <h3>Topic 1</h3>
+        <section id="home-page">
+          <h3 id="summary">Summary</h3>
+          <article id="summary-section">
+            <h2>I give back to the community.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </article>
+
+          <h3 id="whoami">Who Am I?</h3>
+          <article id="whoami-section">
+            <h2>Student of CS + Registered Nurse</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </article>
+
+          <h3 id="progress">In Progress</h3>
+          <article id="progress-section">
+            <h2>Projects</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </article>
       
@@ -39,6 +53,10 @@
       </main>
       <footer>
         <p>&copy; 2024 Emily Tsui</p>
+        <p>Email</p>
+        <p>Telephone</p>
+        <p>LinkedIn</p>
+        <p>Github</p>
       </footer>
 </body>
 </html>
