Added links to index.html

--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png"> 
     <link rel="manifest" href="site.webmanifest">
     <!-- ================================================================= -->
+    
     <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Blog and Gallery Portfolio</title>
 </head>
@@ -37,10 +38,19 @@
                 -->
             <figure>            
                 <img 
+                    src="images/self-portrait-covid-clinic.jpg"
+                    alt="A self portrait of a girl in personal protective equipment, such as a face shield,
+                        grey gloves, and wearing a yellow mesh suit. This was during COVID-19 2020 at a clinic
+                        in New York City."
+                    title="© 2024 Emily Tsui" 
+                />
+                <figcaption>Me during COVID-19 2020 working at a clinic in New York City.</figcaption>
+            </figure>
+            <figure>            
+                <img 
                     src="images/hong-kong-window-dark-rain.jpg"
                     alt="Dark gloomy hotel window in faint green on a rainy afternoon during COVID-19 quarantine in Admiralty, Hong Kong."
                     title="© 2024 Emily Tsui"
-                   
                 />
                 <figcaption>Hotel window during COVID-19 quarantine in Admiralty, Hong Kong.</figcaption>
             </figure>
