--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png"> 
     <link rel="manifest" href="site.webmanifest">
     <!-- ================================================================= -->
+    
     <link href="style.css" rel="stylesheet" type="text/css" />
     <title>Blog and Gallery Portfolio</title>
 </head>
@@ -32,20 +33,47 @@
         <section id="home-page">
           <h3 id="summary">Summary</h3>
           <article id="summary-section">
-            <h2>I give back to the community.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h2>Here to learn and give back to the community.</h2>
+            <p>
+              I volunteer remotely for Code Your Future that helps refugees and asylum seekers learn technology and
+              professionally develop to find jobs in London, UK.
+            </p>
+            <p>
+              At the moment, I am set on transitioning careers into computer science. I am here reinforicing what I 
+              learned in class to create side projects including a long-term portfolio.
+            </p>
           </article>
 
           <h3 id="whoami">Who Am I?</h3>
           <article id="whoami-section">
             <h2>Student of CS + Registered Nurse</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>
+              My goal is to have this website be a long-term hobby project that includes MERN stack.
+              <ol>
+                <li>To re-familiarize skills for building a frontend and backend</li>
+                <li>To include an online resume</li>
+                <li>To release creative energy</li>
+                <li>To have an online presence</li>
+              </ol>
+            </p>
           </article>
 
-          <h3 id="progress">In Progress</h3>
+          <h3 id="progress">In Progress...</h3>
           <article id="progress-section">
             <h2>Projects</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <article>
+              <figure>            
+                <a href="https://simple-web-app-emily-tsui.onrender.com/" target="_blank"><img 
+                    src="images/school-website-screenshot.jpg"
+                    alt="Screenshot of a website page that has a background with the sky and clouds, stones stacked on 
+                        top of each other (Stonehenge). The page also includes a list of recipes that can be added
+                        to the list with diet type, calories, and date. The website is to showcase using a database."
+                    title="© 2024 Emily Tsui"
+                />
+                </a>
+                <figcaption>Website created from class using MongoDB, Express, Node.js, and React.</figcaption>
+            </figure>
+            </article>
           </article>
       
         </section>
@@ -53,10 +81,9 @@
       </main>
       <footer>
         <p>&copy; 2024 Emily Tsui</p>
-        <p>Email</p>
-        <p>Telephone</p>
-        <p>LinkedIn</p>
-        <p>Github</p>
+        <p>Email: tsuiem@oregonstate.edu</p>
+        <p><a href="https://www.linkedin.com/in/tsuiemily/" target="_blank">LinkedIn</a></p>
+        <p><a href="https://github.com/Emily-Tsui/website" target="_blank">Github</a></p>
       </footer>
 </body>
 </html>
